Gabel Caelina: re-add cat wander variables

--- a/mod/area/gabel_caelinaog.git.yml
+++ b/mod/area/gabel_caelinaog.git.yml
@@ -135,10 +135,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 15.0674}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 17.1626}
@@ -264,10 +272,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 16.2728}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 16.5383}
@@ -393,10 +409,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 16.2901}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 15.5963}
@@ -522,10 +546,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 14.3424}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 17.979}
@@ -651,10 +683,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 13.4225}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 17.1538}
@@ -780,10 +820,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bob}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 16.912}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 14.519}
@@ -909,10 +957,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 17.8151}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 15.6126}
@@ -1038,10 +1094,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 18.0736}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 15.0836}
@@ -1167,10 +1231,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 11.2434}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 17.1241}
@@ -1296,10 +1368,18 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 11.8852}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 16.9521}
@@ -1441,7 +1521,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     CloseLockDC: {type: :byte, value: 27}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 50}
@@ -2102,7 +2182,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3341,7 +3421,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8871,7 +8951,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1328}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8934,7 +9014,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 61}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9129,7 +9209,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1229}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9192,7 +9272,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1234}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9320,7 +9400,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1371}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9383,7 +9463,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1350}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9509,7 +9589,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1347}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9572,7 +9652,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1346}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9729,7 +9809,7 @@ WaypointList:
     MapNoteEnabled: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: NW_HOME}
     TemplateResRef: {type: :resref, value: nw_wp_home}
-    XOrientation: {type: :float, value: -0.0}
+    XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 13.6628}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 15.748}
