--- a/mod/area/gabel_caelinaeg.git.yml
+++ b/mod/area/gabel_caelinaeg.git.yml
@@ -135,6 +135,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -264,6 +272,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -393,6 +409,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_black}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 5}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -522,6 +546,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -651,6 +683,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -780,6 +820,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_bw}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -909,6 +957,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1038,6 +1094,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1167,6 +1231,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1296,6 +1368,14 @@ Creature List:
       value: []
 
     TemplateResRef: {type: :resref, value: cat_k_white}
+    VarTable: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: wander}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     WalkRate: {type: :int, value: 7}
     Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 5}
@@ -1578,7 +1658,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1641,7 +1721,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 188}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1704,7 +1784,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 372}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1769,7 +1849,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 3}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1834,7 +1914,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 2}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1899,7 +1979,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 4}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1964,7 +2044,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 49}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2029,7 +2109,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 49}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2094,7 +2174,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1314}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2220,7 +2300,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1343}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2346,7 +2426,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1352}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2409,7 +2489,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2472,7 +2552,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2535,7 +2615,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2598,7 +2678,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2850,7 +2930,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1384}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2913,7 +2993,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1384}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2976,7 +3056,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1384}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3039,7 +3119,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1384}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3102,7 +3182,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3173,7 +3253,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3823,7 +3903,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1350}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3886,7 +3966,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1371}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -3949,7 +4029,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4012,7 +4092,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 188}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4201,7 +4281,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1353}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4264,7 +4344,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 188}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4768,7 +4848,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1312}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4831,7 +4911,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1356}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4957,7 +5037,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 8}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5020,7 +5100,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 10}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
+    Bearing: {type: :float, value: 0.0}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
