--- a/mod/uti/Makefile
+++ b/mod/uti/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.resource
 
-all: $(res) itempalcus.itp
+all: $(res) ../itp/itempalcus.itp
 
-itempalcus.itp: $(res)
+../itp/itempalcus.itp: $(res)
 	../mkpal baseitems BaseItem UTI *.uti.yml > ../itp/itempalcus.itp
