Gabel Bordell: HDL redesign
Signed-off-by: Marcel Beyer <mbeyer@swordcoast.net>

--- a/mod/dlg/hdl_intro.dlg.yml
+++ b/mod/dlg/hdl_intro.dlg.yml
@@ -29,7 +29,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Gr\xFC\xDFe und willkommen im Haus der Liebe"
+        0: "Gr\xFC\xDFe und willkommen in der Feuerrose."
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     AnimLoop: {type: :byte, value: 1}
@@ -61,7 +61,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Das hier ist das Haus der Liebe. Ein Ort an dem ausgew\xE4hlte Gesellschaft seine Zeit verbringt."
+        0: "Das hier ist die Feuerrose. Ein Ort an dem ausgew\xE4hlte Gesellschaft seine Zeit verbringt."
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     AnimLoop: {type: :byte, value: 1}
@@ -83,7 +83,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Bordell? Nie und nimmer, wir begleiten unsere Kunden den Tage \xFCber. Eine h\xFCbsche Dame an der Seite ist mehr Wert als es eine Bordelldame je sein k\xF6nnte."
+        0: "Bordell? Nie und nimmer, wir begleiten unsere Kunden den Tage \xFCber. Eine h\xFCbsche Dame an der Seite ist mehr Wert als es eine Bordelldame je sein k\xF6nnte. Au\xDFerdem bieten wir noch zahlreiche Annehmlichkeiten an. Kommt und macht Euch ein eigenes Bild. "
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 3
     AnimLoop: {type: :byte, value: 1}
@@ -127,8 +127,8 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Aber nat\xFCrlich, Damen aus aller L\xE4nder, gesegnet mit Sch\xF6nheit und tadellosem Benehmen. Ihr k\xF6nnt dazu geh\xF6ren, wenn ihr bereit seid das notwendige daf\xFCr zu tun."
-NumWords: {type: :dword, value: 147}
+        0: "Aber nat\xFCrlich, Damen aus aller L\xE4nder, gesegnet mit Sch\xF6nheit und tadellosem Benehmen. Ihr k\xF6nnt dazu geh\xF6ren, wenn ihr bereit seid das Notwendige daf\xFCr zu tun."
+NumWords: {type: :dword, value: 158}
 PreventZoomIn: {type: :byte, value: 0}
 ReplyList: 
   type: :list
