mkpal res targets: depend on script

--- a/mod/uti/Makefile
+++ b/mod/uti/Makefile
@@ -2,5 +2,5 @@ include ../Makefile.resource
 
 all: $(res) ../itp/itempalcus.itp
 
-../itp/itempalcus.itp: $(res)
+../itp/itempalcus.itp: ../mkpal $(res)
 	../mkpal baseitems BaseItem UTI *.uti.yml > ../itp/itempalcus.itp
