--- a/mod/utc/Makefile
+++ b/mod/utc/Makefile
@@ -2,5 +2,5 @@ include ../Makefile.resource
 
 all: $(res) ../itp/creaturepalcus.itp
 
-../itp/creaturepalcus.itp: $(res)
+../itp/creaturepalcus.itp: ../mkpal $(res)
 	../mkpal racialtypes Race UTC *.utc.yml > ../itp/creaturepalcus.itp
