Gabel Antik: Khorists' Antikladen @ Gabel SW/S

--- a/mod/area/gabel_sw.git.yml
+++ b/mod/area/gabel_sw.git.yml
@@ -1855,31 +1855,33 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -1.5708}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 27}
     Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
+    CurrentHP: {type: :short, value: 50}
     Description: 
       type: :cexolocstr
       value: {}
 
     DisarmDC: {type: :byte, value: 0}
     Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
+    Fort: {type: :byte, value: 16}
     GenericType_New: {type: :dword, value: 0}
-    HP: {type: :short, value: 10}
+    HP: {type: :short, value: 50}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: xyz}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    KeyName: {type: :cexostr, value: key_galerie}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: galerie_sw}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
-      value: {}
+      value: 
+        0: !binary |
+          VPxy
 
     Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -1894,11 +1896,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
+    OpenLockDC: {type: :byte, value: 30}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Haustrunbreakable}
+    Tag: {type: :cexostr, value: sw_galerie}
     TemplateResRef: {type: :resref, value: door_unbreak}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -2050,7 +2052,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -7241,7 +7243,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 81}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -17542,7 +17544,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1253}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel009}
     TemplateResRef: {type: :resref, value: x3_plc_treel009}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17607,7 +17609,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1252}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel008}
     TemplateResRef: {type: :resref, value: x3_plc_treel008}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17672,7 +17674,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1250}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel006}
     TemplateResRef: {type: :resref, value: x3_plc_treel006}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17737,7 +17739,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1253}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel009}
     TemplateResRef: {type: :resref, value: x3_plc_treel009}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17802,7 +17804,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1249}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel005}
     TemplateResRef: {type: :resref, value: x3_plc_treel005}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17867,7 +17869,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1250}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel006}
     TemplateResRef: {type: :resref, value: x3_plc_treel006}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17932,7 +17934,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1251}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel007}
     TemplateResRef: {type: :resref, value: x3_plc_treel007}
     TrapDetectDC: {type: :byte, value: 0}
@@ -17997,7 +17999,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1253}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel009}
     TemplateResRef: {type: :resref, value: x3_plc_treel009}
     TrapDetectDC: {type: :byte, value: 0}
@@ -18062,7 +18064,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1251}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel007}
     TemplateResRef: {type: :resref, value: x3_plc_treel007}
     TrapDetectDC: {type: :byte, value: 0}
@@ -18452,7 +18454,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1251}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel007}
     TemplateResRef: {type: :resref, value: x3_plc_treel007}
     TrapDetectDC: {type: :byte, value: 0}
@@ -18517,7 +18519,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1250}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel006}
     TemplateResRef: {type: :resref, value: x3_plc_treel006}
     TrapDetectDC: {type: :byte, value: 0}
@@ -18537,7 +18539,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 570}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -18582,7 +18584,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1250}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel006}
     TemplateResRef: {type: :resref, value: x3_plc_treel006}
     TrapDetectDC: {type: :byte, value: 0}
@@ -18797,7 +18799,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 399}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -18927,7 +18929,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 399}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -19642,7 +19644,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 335}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -19707,7 +19709,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 335}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -26654,7 +26656,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 292}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -26719,7 +26721,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 292}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -27432,7 +27434,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1016}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -29308,7 +29310,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1253}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel009}
     TemplateResRef: {type: :resref, value: x3_plc_treel009}
     TrapDetectDC: {type: :byte, value: 0}
@@ -29373,7 +29375,7 @@ Placeable List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1253}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: x3_plc_treel009}
     TemplateResRef: {type: :resref, value: x3_plc_treel009}
     TrapDetectDC: {type: :byte, value: 0}
@@ -32895,6 +32897,71 @@ Placeable List:
     X: {type: :float, value: 73.8877}
     Y: {type: :float, value: 46.5052}
     Z: {type: :float, value: 6.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 157}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.0}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 15}
+    Description: 
+      type: :cexolocstr
+      str_ref: 14662
+      value: 
+        0: ""
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    HP: {type: :short, value: 15}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 5800
+      value: 
+        0: "Kunstgalerie Khorist - Antiquit\xE4ten, Repliken und andere Kunstobjekte"
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 515}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: Kunstgalerie}
+    TemplateResRef: {type: :resref, value: invisobj}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 94.53}
+    Y: {type: :float, value: 85.12}
+    Z: {type: :float, value: 2.3}
 SoundList: 
   type: :list
   value: 
@@ -33969,3 +34036,30 @@ WaypointList:
     YOrientation: {type: :float, value: -1.0}
     YPosition: {type: :float, value: 96.1837}
     ZPosition: {type: :float, value: 0.2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14814
+      value: 
+        0: Kunstgalerie
+    MapNote: 
+      type: :cexolocstr
+      str_ref: 14815
+      value: 
+        0: Kunstgalerie Khorist
+    MapNoteEnabled: {type: :byte, value: 1}
+    Tag: {type: :cexostr, value: Kunstgalerie}
+    TemplateResRef: {type: :resref, value: nw_mapnote001}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 96.5596}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 81.6534}
+    ZPosition: {type: :float, value: 0.21}
