Arnwald Soeldnerlager: lighting, remove tree spawns, add containers, move spawns
p_ranger160210:
- changed lightning in arnwald_depot , arnwald_zelte
- (hopefully) removed random spawning trees in area025
- added locally accessable persistent container in arnwald_depot (bound
to vashando)
- moved boar spawnpoints in area025

--- a/mod/area/arnwald_depot.are.yml
+++ b/mod/area/arnwald_depot.are.yml
@@ -12,7 +12,7 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 1}
-FogClipDist: {type: :float, value: 45.0}
+FogClipDist: {type: :float, value: 100.0}
 Height: {type: :int, value: 2}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 0}
@@ -21,8 +21,8 @@ LoadScreenID: {type: :word, value: 0}
 ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
 MoonAmbientColor: {type: :dword, value: 0}
-MoonDiffuseColor: {type: :dword, value: 13132900}
-MoonFogAmount: {type: :byte, value: 0}
+MoonDiffuseColor: {type: :dword, value: 0}
+MoonFogAmount: {type: :byte, value: 10}
 MoonFogColor: {type: :dword, value: 6566450}
 MoonShadows: {type: :byte, value: 1}
 Name: 
@@ -38,10 +38,10 @@ PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: arnwald_depot}
 ShadowOpacity: {type: :byte, value: 50}
 SkyBox: {type: :byte, value: 0}
-SunAmbientColor: {type: :dword, value: 6566450}
-SunDiffuseColor: {type: :dword, value: 16777215}
-SunFogAmount: {type: :byte, value: 0}
-SunFogColor: {type: :dword, value: 9535080}
+SunAmbientColor: {type: :dword, value: 16777215}
+SunDiffuseColor: {type: :dword, value: 7709439}
+SunFogAmount: {type: :byte, value: 10}
+SunFogColor: {type: :dword, value: 13762559}
 SunShadows: {type: :byte, value: 1}
 Tag: {type: :cexostr, value: arnwald_depot}
 Tile_List: 
